@@ -1,3 +1,7 @@
+2017-12-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* avrdude.conf.in (xplainedmini_updi): New programmer
+
 2017-12-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* bootstrap: Detect whether libtoolize is named
